configured DTO and web config entries  , will hep in fetching logic

--- a/BeerProxyApi/Web.config
+++ b/BeerProxyApi/Web.config
@@ -11,7 +11,13 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BeerProxyApi-20180128052204.mdf;Initial Catalog=aspnet-BeerProxyApi-20180128052204;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="BeerUrl" value="http://api.brewerydb.com/v2/" />
+    <add key="PrivateKey" value="a22a780a8e664976b8fbf7c778ea469f" />
+    <add key="BeerController" value="beer" />
+    <add key="BeersController" value="beers" />
+
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
