--- a/BeerProxyServer/BeerProxyServer.csproj
+++ b/BeerProxyServer/BeerProxyServer.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,13 +44,16 @@
     <Compile Include="DTO\BeerRequestInfo\BeerRequestInfo.cs" />
     <Compile Include="DTO\BeerResponseInfo\BeerResponseInfo.cs" />
     <Compile Include="DTO\BeerResponseInfo\BeersResponseInfo.cs" />
+    <Compile Include="DTO\Info\BeerInfo.cs" />
+    <Compile Include="DTO\Info\HexInfo.cs" />
+    <Compile Include="DTO\Info\LabelInfo.cs" />
+    <Compile Include="DTO\Info\StyleInfo.cs" />
     <Compile Include="Interface\IBeer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProxyClients\BeerProxyClients.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controller\" />
-    <Folder Include="DTO\Info\" />
     <Folder Include="Utilities\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
