http Utility needed as client to interact with breweryApi server and Stub

--- a/BeerProxyApi/BeerProxyApi.csproj
+++ b/BeerProxyApi/BeerProxyApi.csproj
@@ -317,6 +317,12 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BeerProxyServer\BeerProxyServer.csproj">
+      <Project>{cc36099c-be81-4fce-8824-f067ed7ac23a}</Project>
+      <Name>BeerProxyServer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
