with new method for search a beer .. added new get method and added  search response info .

--- a/BeerProxyServer/BeerProxyServer.csproj
+++ b/BeerProxyServer/BeerProxyServer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Controller\BeerController.cs" />
     <Compile Include="DTO\BeerRequestInfo\BeerRequestInfo.cs" />
     <Compile Include="DTO\BeerResponseInfo\BeerResponseInfo.cs" />
+    <Compile Include="DTO\BeerResponseInfo\BeerSearchResponseInfo.cs" />
     <Compile Include="DTO\BeerResponseInfo\BeersResponseInfo.cs" />
     <Compile Include="DTO\Info\BeerInfo.cs" />
     <Compile Include="DTO\Info\HexInfo.cs" />
